--- a/.github/workflows/tichafasta.yml
+++ b/.github/workflows/tichafasta.yml
@@ -17,7 +17,14 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '3.29.2'
+
+      - name: Cache Flutter
+        uses: actions/cache@v3
+        with:
+         path: ~/.flutter
+         key: flutter-${{ runner.os }}-${{ hashFiles('**/pubspec.yaml') }}
+
 
       - name: Install dependencies
         run: flutter pub get
