--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.6
   lucide_icons: ^0.257.0
   flutter_riverpod: ^2.6.1
   google_sign_in: ^6.3.0
   firebase_auth: ^5.5.2
+  wolt_modal_sheet: ^0.11.0
 
 dev_dependencies:
   flutter_test:
