--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_auth: ^5.5.2
   wolt_modal_sheet: ^0.11.0
+  shadcn_flutter: ^0.0.34
 
 dev_dependencies:
   flutter_test:
